<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.harsharavuri.harshastartoverapp.MainActivity"

    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/harshaImageView"
        android:layout_marginEnd="10dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/include"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="10dp" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_dialog_email"
        android:layout_marginEnd="13dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/include"
        android:layout_marginBottom="21dp"
        android:layout_marginRight="13dp" />

    <include
        android:id="@+id/include"
        layout="@layout/content_main"
        android:layout_width="1196dp"
        android:layout_height="0dp"
        android:layout_marginEnd="91dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/textView2"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/harshaImageView"
        android:layout_marginRight="91dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="sendMessage"
        android:text="@string/button_send"
        android:layout_marginStart="8dp"
        app:layout_constraintRight_toLeftOf="@+id/editText"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="11dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="textPersonName"
        android:layout_marginStart="123dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="48dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="123dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:hint="@string/buttton2_send"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="154dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="102dp"
        android:layout_height="24dp"
        android:hint="@string/edit2_message"
        android:layout_marginStart="18dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button2"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/button2"
        android:layout_marginLeft="18dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="20dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="vertical"
        app:layout_constraintGuide_end="320dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:hint="@string/AddQuestion"
        android:onClick="addQuestion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

</android.support.constraint.ConstraintLayout>
